--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,32 +2,31 @@
 
 <html>
 <head>
-	<title>Home Screen</title>	
+	<title>Home</title>	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
 	<link href="/css/app_style.css" rel="stylesheet">
-
-	<script src="/js/home.js"></script>
-	      
+	<script src="https://code.jquery.com/jquery.js"></script>
 </head>
 
 <body>
-	<div class="container">
-		{{#each avatar}}
+    <div class="container">
+	{{#each avatar}}
 			<div onclick="openNav()">
 				<img src="{{image}}" alt="Avatar" class="img" height="30" width="30">
 			</div>
 			<div class="top_title" align="center">
 				<div class="app_title">
 					<h1>THIS or THAT</h1>
-					<p>Helping YOU decide what to do</p>
+					<p></p>
 				</div>
 			</div>
 
 			<div id="{{id}}" class="{{class}}">
   				<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+				<a href=".">Home</a>
   				<a href="profile">Profile</a>
   				<a href="history">History</a>
 				<a href="tips">Stress Relief Tips</a>  
@@ -35,27 +34,127 @@
 			</div>
 		{{/each}}
 
-		<div class="text-center">
-			{{#each scale}}
-				<div class="{{class}}" id="{{id}}">
-						<div>
-							<img src="{{image}}" alt="Scale" class="img" id="main_page_scale" height="200" width="200">
-						</div>
-						<div class="options_text">
-							<button type="button" class="btn btn-primary"><a href="{{next}}">Weigh My Options</a></button>
-						</div>
-				</div>
-			{{/each}}
+		<div class="text_center" align="center">
+			<img class = "scale_pic" src="../images/scale.png" alt="scale" class="img" style="width: 100%; height: auto">
 
-	
-			<div class="stress_help">
-				<a href="help">
-					<img src="../images/question.png" alt="Help" class="img" height="25" width="25">
-				</a>
+			<form id="addOptionsForm" role="form" method="get" action="/add_options">
+				<div class="input-group">
+					<span class="input-group-btn">
+						<button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#option1-menu">+</button>
+					</span>
+					<div class="option_text">
+    				<input type="text" class="form-control" id="option1" placeholder="Option 1" name="option1"/>
+					</div>
+					<span class="input-group-btn">
+						<button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#option2-menu">+</button>
+					</span>
+					<div class="option_text">
+    				<input type="text" class="form-control" id="option2" placeholder="Option 2" name="option2"/>
+					</div>
+				</div>
+				<div class="text-center" style="padding-top: 10px">
+				<div id="option1-menu" class="collapse">
+    			<div class="dropdown">
+					What kind of task is this?
+  					<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+    					Dropdown
+    					<span class="caret"></span>
+  					</button>
+  					<ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu1">
+    					{{#each list}}
+							<li><a href="#">{{type}}</a></li>
+						{{/each}}
+  					</ul>
+				</div>
+
+				<div style="padding-top: 10%">
+					<form>
+  						Due Date:
+  						<input type="date">
+					</form>
+				</div>
+
+					<div class="slidecontainer" style="padding-top: 10%">
+						<p>How much is the workload for this task? (Low to high)</p>
+  						<input type="range" min="1" max="5" value="1" class="slider" id="work_slider_one">
+					  	<p>Value: <span id="work_value_one"></span></p>
+					</div>
+
+					<div class="slidecontainer" style="padding-top: 10%">
+						<p>How quickly can you finish this task? (Slow to fast)</p>
+  						<input type="range" min="1" max="5" value="1" class="slider" id="quick_slider_one">
+					  	<p>Value: <span id="quick_value_one"></span></p>
+					</div>
+
+					<div class="slidecontainer" style="padding-top: 10%">
+						<p>How much does completing this task inpact your future plans? (small to large impact)</p>
+  						<input type="range" min="1" max="5" value="1" class="slider" id="future_slider_one">
+					  	<p>Value: <span id="future_value_one"></span></p>
+					</div>
+
+  			</div>
+
+
+			<div id="option2-menu" class="collapse">
+    			<div class="dropdown">
+					What kind of task is this?
+  					<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+    					Dropdown
+    					<span class="caret"></span>
+  					</button>
+  					<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+    					{{#each list}}
+							<li><a href="#">{{type}}</a></li>
+						{{/each}}
+  					</ul>
+				</div>
+
+				<div style="padding-top: 10%">
+					<form>
+  						Due Date:
+  						<input type="date">
+					</form>
+				</div>
+				
+					<div class="slidecontainer" style="padding-top: 10%">
+						<p>How much is the workload for this task? (Low to high)</p>
+  						<input type="range" min="1" max="5" value="1" class="slider" id="work_slider_two">
+					  	<p>Value: <span id="work_value_two"></span></p>
+					</div>
+
+					<div class="slidecontainer" style="padding-top: 10%">
+						<p>How quickly can you finish this task? (Slow to fast)</p>
+  						<input type="range" min="1" max="5" value="1" class="slider" id="quick_slider_two">
+					  	<p>Value: <span id="quick_value_two"></span></p>
+					</div>
+
+					<div class="slidecontainer" style="padding-top: 10%">
+						<p>How much does completing this task inpact your future plans? (small to large impact)</p>
+  						<input type="range" min="1" max="5" value="1" class="slider" id="future_slider_two">
+					  	<p>Value: <span id="future_value_two"></span></p>
+					</div>
+
+				</div>
+
+  			<div class="submit_options">
+					<input type="submit" class="btn btn-primary" id="weigh_options" disabled="disabled" value="Weigh my options!"/>
+				</div>
+			</form>
+
+			<div id="decision-menu">
+				{{#each options}}
+					<h1 style="color:green;">{{option1}}</h1>
+					<div class="text-center" style="padding-top: 10px">
+						<a class="btn btn-primary" href="history" role="button">Here's why</a>
+					</div>
+				{{/each}}
 			</div>
+			<form id="resetOptionsForm" role="form" method="get" action="/resetOptions" style="float: right; padding-top: 10%">
+				<input type="submit" class="btn btn-dark" id="reset_options" value="Reset">
+			</form>
 		</div>
 	</div>
-	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
+	<script src="/js/options_code.js"></script>
 </body>
 </html>
