--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -9,42 +9,60 @@
 	<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
 	<link href="/css/app_style.css" rel="stylesheet">     
 	<script src="https://code.jquery.com/jquery.js"></script>
+	<script type = "text/javascript" 
+         src = "https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js">
+      </script>
 </head>
 
 <body>
 	<div class="container">
-		<a href=".">
-			<img src="../images/back_arrow.png" alt="back" class="img" height="40" width="40">
-		</a>
-		<div class="text-center">
-			<h1>PROFILE</h1>
-		</div>
+		{{#each avatar}}
+			<div onclick="openNav()">
+				<img src="{{image}}" alt="Avatar" class="img" height="30" width="30">
+			</div>
+			<div class="top_title" align="center">
+				<div class="app_title">
+					<h1>PROFILE</h1>
+					<p></p>
+				</div>
+			</div>
+
+			<div id="{{id}}" class="{{class}}">
+  				<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+				<a href=".">Home</a>
+  				<a href="profile">Profile</a>
+  				<a href="history">History</a>
+				<a href="tips">Stress Relief Tips</a>  
+				<a href="login">Logout</a>
+			</div>
+		{{/each}}
 		<form id="addTaskForm" role="form" method="get" action="/add_type">
 			<div class="form-group" id="add_task">
-				<input type="text" class="form-control" id="input_task" placeholder="Add new task..." name="input_task"/>
+				<p>Input new category:</p>
+				<input type="text" class="form-control" id="input_task" placeholder="Add new category..." name="input_task"/>
+				<div class="slidecontainer" style="padding-top: 10%">
+						<p>Category importance (1-5):</p>
+  						<input type="range" min="1" max="5" value="1" class="slider" id="input_weight" name="input_weight">
+					  	<p>Value: <span id="importance_value"></span></p>
+				</div>
 			</div>
 				<input type="submit" class="btn btn-outline-secondary" id="put_task" value="Add"></input>
 		</form>
 		<ul class="list-group" id="task_list">
 			{{#each list}}
 				<li class="list-group-item">{{type}}
-				<div class="slidecontainer">
-  					<input type="range" min="1" max="5" value="1" class="slider" class="myRange">
-					<p>Importance: <span class="slider_value"></span></p>
-				</div>
+					<div class="importance">
+					<b>Importance: {{weight}}</b>
+					</div>
 				</li>
 			{{/each}}
 		</ul>
-	</div>
-	<script>
-		var slider = $(".myRange");
-		var output = $(".slider_value");
-		output.html(slider.val());
 
-		slider.change( function() {
- 	 		output.html($(this).val());
-		})
-</script>
+		<a href="." class="btn btn-success" id="submit_profile" style="float: left;">Submit</a>
+		<form id="resetProfileForm" role="form" method="get" action="/resetProfile" style="float: right; padding-top: 10%">
+			<input type="submit" class="btn btn-dark" id="reset_profile" value="Reset">
+		</form>
+	</div>
 	<script src="js/profile_code.js"></script>
 </body>
 </html>
