--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,8 +9,18 @@
 	<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
 	<link href="/css/app_style.css" rel="stylesheet">
 	<script src="https://code.jquery.com/jquery.js"></script>
-</head>
+	<!-- Google Analytics -->
+	<script>
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
+	ga('create', 'UA-135764569-1', 'auto');
+	ga('send', 'pageview');
+	</script>
+	<!-- End Google Analytics -->
+</head>
 <body>
     <div class="container">
 	{{#each avatar}}
@@ -36,7 +46,115 @@
 
 		<div class="text_center" align="center">
 			<img class = "scale_pic" src="../images/scale.png" alt="scale" class="img" style="width: 100%; height: auto">
+			{{#if viewAlt}}
+			<form id="addOptionsForm" role="form" method="get" action="/add_options">
+				<div class="input-group">
+					<span class="input-group-btn">
+						<button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#option1-menu">+</button>
+					</span>
+					<div class="option_text">
+    				<input type="text" class="form-control" id="option1" placeholder="Option 1" name="option1"/>
+					</div>
+				</div>
 
+				<div id="option1-menu" class="collapse">
+    			<div class="dropdown">
+					What kind of task is this?
+  					<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+    					Dropdown
+    					<span class="caret"></span>
+  					</button>
+  					<ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu1">
+    					{{#each list}}
+							<li><a href="#">{{type}}</a></li>
+						{{/each}}
+  					</ul>
+				</div>
+
+				<div style="padding-top: 10%">
+					<form>
+  						Due Date:
+  						<input type="date">
+					</form>
+				</div>
+
+					<div class="slidecontainer" style="padding-top: 10%">
+						<p>How much is the workload for this task? (Low to high)</p>
+  						<input type="range" min="1" max="5" value="1" class="slider" id="work_slider_one">
+					  	<p>Value: <span id="work_value_one"></span></p>
+					</div>
+
+					<div class="slidecontainer" style="padding-top: 10%">
+						<p>How quickly can you finish this task? (Slow to fast)</p>
+  						<input type="range" min="1" max="5" value="1" class="slider" id="quick_slider_one">
+					  	<p>Value: <span id="quick_value_one"></span></p>
+					</div>
+
+					<div class="slidecontainer" style="padding-top: 10%">
+						<p>How much does completing this task inpact your future plans? (small to large impact)</p>
+  						<input type="range" min="1" max="5" value="1" class="slider" id="future_slider_one">
+					  	<p>Value: <span id="future_value_one"></span></p>
+					</div>
+  				</div>
+
+				<div class="input-group" style="padding-top: 10px">
+					<span class="input-group-btn">
+						<button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#option2-menu">+</button>
+					</span>
+					<div class="option_text">
+    				<input type="text" class="form-control" id="option2" placeholder="Option 2" name="option2"/>
+					</div>
+				</div>
+				
+			<div id="option2-menu" class="collapse">
+    			<div class="dropdown">
+					What kind of task is this?
+  					<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+    					Dropdown
+    					<span class="caret"></span>
+  					</button>
+  					<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+    					{{#each list}}
+							<li><a href="#">{{type}}</a></li>
+						{{/each}}
+  					</ul>
+				</div>
+
+				<div style="padding-top: 10%">
+					<form>
+  						Due Date:
+  						<input type="date">
+					</form>
+				</div>
+				
+					<div class="slidecontainer" style="padding-top: 10%">
+						<p>How much is the workload for this task? (Low to high)</p>
+  						<input type="range" min="1" max="5" value="1" class="slider" id="work_slider_two">
+					  	<p>Value: <span id="work_value_two"></span></p>
+					</div>
+
+					<div class="slidecontainer" style="padding-top: 10%">
+						<p>How quickly can you finish this task? (Slow to fast)</p>
+  						<input type="range" min="1" max="5" value="1" class="slider" id="quick_slider_two">
+					  	<p>Value: <span id="quick_value_two"></span></p>
+					</div>
+
+					<div class="slidecontainer" style="padding-top: 10%">
+						<p>How much does completing this task inpact your future plans? (small to large impact)</p>
+  						<input type="range" min="1" max="5" value="1" class="slider" id="future_slider_two">
+					  	<p>Value: <span id="future_value_two"></span></p>
+					</div>
+
+				</div>
+
+				<div class="text-center" style="padding-top: 10px">
+					<div class="submit_options">
+						<input type="submit" class="btn btn-primary" id="weigh_options" disabled="disabled" value="Weigh my options!"/>
+					</div>
+				</div>
+			</form>
+
+			{{else}}
 			<form id="addOptionsForm" role="form" method="get" action="/add_options">
 				<div class="input-group">
 					<span class="input-group-btn">
@@ -140,6 +258,7 @@
 					<input type="submit" class="btn btn-primary" id="weigh_options" disabled="disabled" value="Weigh my options!"/>
 				</div>
 			</form>
+			{{/if}}
 
 			<div id="decision-menu">
 				{{#each options}}
