--- a/views/tips.handlebars
+++ b/views/tips.handlebars
@@ -40,6 +40,49 @@
 					<a href="login">Logout</a>
 			</div>
 		{{/each}}
+
+		<div>
+			<h3>Exercise</h3>
+			<h5>Exercise has been shown to improve mood and release endorphins—the brain’s feel-good 
+					neurotransmitter. 
+			</h5>
+			<ul>
+				<li>Running</li>
+				<li>Working Out</li>
+				<li>Dancing</li>
+				<li>Working Out</li>
+			</ul>
+			<h3>Meditation</h3>
+			<h5>Meditation helps you focus on the present and clear your head.</h5>
+			<ul>
+				<li>Guided Meditation</li>
+				<li>Mantra Meditation</li>
+				<li>Mindfulness Meditation</li>
+			</ul>
+			<h3>Breathing</h3>
+			<h5>Breathing helps your body relax and keeps you in the present moment.</h5>
+			<ul>
+				<li>Controlled Breathing Techniques</li>
+				<li>Timed Breathing</li>
+				<li>Alternate in-out Breathing Techniques</li>
+			</ul>
+			<h3>Talking/Venting/Writing</h3>
+			<h5>Having support groups or someone you can talk to can help you get things into perspective, 
+				and helps you release stress that you have kept inside.
+			</h5>
+			<ul>
+				<li>Journaling/Diary</li>
+				<li>Hanging Out</li>
+				<li>Therapy</li>
+			</ul>
+			<h3>Time</h3>
+			<h5>Making time for yourself, whether it be alone time or time to hang out with friends can help you feel less stressed.</h5>
+			<ul>
+				<li>Self-Reflection</li>
+				<li>Spending Time with Otherst</li>
+				<li>Relaxation</li>
+			</ul>
+		</div>
 	</div>
 	<script>
 		$(document).ready(function() {
