--- a/public/css/app_style.css
+++ b/public/css/app_style.css
@@ -107,16 +107,10 @@
      width: 100%;
      height: 15px;
      border-radius: 5px;
-     background: #d3d3d3;
+     background: #dcdcdc;
      outline: none;
-     opacity: 0.7;
-     -webkit-transition: .2s;
-     transition: opacity .2s;
    }
    
-   .slider:hover {
-     opacity: 1;
-   }
    
    .slider::-webkit-slider-thumb {
      -webkit-appearance: none;
@@ -124,7 +118,7 @@
      width: 25px;
      height: 25px;
      border-radius: 50%;
-     background: rgb(14, 80, 221);
+     background: #808080;
      cursor: pointer;
    }
    
@@ -132,7 +126,7 @@
      width: 25px;
      height: 25px;
      border-radius: 50%;
-     background: rgb(14, 80, 221);
+     background: #808080;
      cursor: pointer;
    }
 
@@ -142,4 +136,12 @@
 
    .list-group-item > div {
         font-weight: normal;
+   }
+
+   #option1-menu {
+     background-color: #5a9daa
+     }
+
+   #option2-menu {
+        background-color: #5a9daa
    }
