--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,20 +2,6 @@
 
 <html>
 <head>
-	<!-- Google Analytics Content Experiment code -->
-	<script>function utmx_section(){}function utmx(){}(function(){var
-	k='191086112-0',d=document,l=d.location,c=d.cookie;
-	if(l.search.indexOf('utm_expid='+k)>0)return;
-	function f(n){if(c){var i=c.indexOf(n+'=');if(i>-1){var j=c.
-	indexOf(';',i);return escape(c.substring(i+n.length+1,j<0?c.
-	length:j))}}}var x=f('__utmx'),xx=f('__utmxx'),h=l.hash;d.write(
-	'<sc'+'ript src="'+'http'+(l.protocol=='https:'?'s://ssl':
-	'://www')+'.google-analytics.com/ga_exp.js?'+'utmxkey='+k+
-	'&utmx='+(x?x:'')+'&utmxx='+(xx?xx:'')+'&utmxtime='+new Date().
-	valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
-	'" type="text/javascript" charset="utf-8"><\/sc'+'ript>')})();
-	</script><script>utmx('url','A/B');</script>
-	<!-- End of Google Analytics Content Experiment code -->
 	<title>Home</title>	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,25 +9,14 @@
 	<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
 	<link href="/css/app_style.css" rel="stylesheet">
 	<script src="https://code.jquery.com/jquery.js"></script>
-	<!-- Google Analytics -->
-	<script>
-	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-	ga('create', 'UA-135764569-1', 'auto');
-	ga('send', 'pageview');
-	</script>
-	<!-- End Google Analytics -->
 </head>
 <body>
     <div class="container">
 	{{#each avatar}}
-			<div onclick="openNav()">
-				<img src="{{image}}" alt="Avatar" class="img" height="30" width="30">
-			</div>
-			<div class="top_title" align="center">
+			<div class="top_title" align="center" style="padding-top: 10%">
+				<div onclick="openNav()" style="float: left">
+					<img src="{{image}}" alt="Avatar" class="img" height="30" width="30">
+				</div>
 				<div class="app_title">
 					<img src="../images/title.png" alt="title" class="img" height="auto" width="200">
 				</div>
@@ -58,20 +33,17 @@
 		{{/each}}
 
 		<div class="text_center" align="center" style="padding-top: 10%">
-			<img class = "scale_pic" src="../images/scale.png" alt="scale" class="img" style="width: 100%; height: auto">
-			{{#if viewAlt}}
-			<form id="addOptionsForm" role="form" method="get" action="/add_options">
-				<div class="input-group">
-					<span class="input-group-btn">
-						<button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#option1-menu">+</button>
-					</span>
-					<div class="option_text">
-    				<input type="text" class="form-control" id="option1" placeholder="Option 1" name="option1"/>
-					</div>
+			<img id= "scale_pic" src="../images/scale.png" alt="scale pic" class="img" style="width: 100%; height: auto">
+			<img id= "scale_gif" src="../images/scale_right.gif" alt="scale gif" class="img" style="width: 100%; height: auto; display: none;">
+
+			<form id="addOptionsForm" role="form" method="get" action="/add_options"  style="padding-top: 10%">
+				<div class="form-group">
+				<div class="option_text">
+    				<input type="text" class="form-control" id="option1" placeholder="Option 1" name="option1" data-toggle="collapse" data-target="#option1-menu"/>
 				</div>
 
 				<div id="option1-menu" class="collapse">
-    			<div class="dropdown">
+    			<div class="dropdown" style="color:white">
 					What kind of task is this?
   					<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
     					Dropdown
@@ -84,43 +56,45 @@
   					</ul>
 				</div>
 
-				<div style="padding-top: 10%">
+				<div style="padding-top: 10%; color: white">
 					<form>
   						Due Date:
   						<input type="date">
 					</form>
 				</div>
 
-					<div class="slidecontainer" style="padding-top: 10%">
+					<div class="slidecontainer" style="padding-top: 10%; color: white">
 						<p>How much is the workload for this task? (Low to high)</p>
   						<input type="range" min="1" max="5" value="1" class="slider" id="work_slider_one">
 					  	<p>Value: <span id="work_value_one"></span></p>
 					</div>
 
-					<div class="slidecontainer" style="padding-top: 10%">
+					<div class="slidecontainer" style="padding-top: 10%; color: white">
 						<p>How quickly can you finish this task? (Slow to fast)</p>
   						<input type="range" min="1" max="5" value="1" class="slider" id="quick_slider_one">
 					  	<p>Value: <span id="quick_value_one"></span></p>
 					</div>
 
-					<div class="slidecontainer" style="padding-top: 10%">
+					<div class="slidecontainer" style="padding-top: 10%; color: white">
 						<p>How much does completing this task inpact your future plans? (small to large impact)</p>
   						<input type="range" min="1" max="5" value="1" class="slider" id="future_slider_one">
 					  	<p>Value: <span id="future_value_one"></span></p>
 					</div>
+					
+					<div class="save_close">
+						<button type="button" class="btn btn-success" id="save_option1" data-toggle="collapse" data-target="#option1-menu">Save</button>
+						<button type="button" class="close" aria-label="Close" style="float: right" data-toggle="collapse" data-target="#option1-menu">
+  							<span aria-hidden="true" style="height:5px;width:5px">&times;</span>
+						</button>
+					</div>
   				</div>
 
-				<div class="input-group" style="padding-top: 10px">
-					<span class="input-group-btn">
-						<button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#option2-menu">+</button>
-					</span>
-					<div class="option_text">
-    				<input type="text" class="form-control" id="option2" placeholder="Option 2" name="option2"/>
-					</div>
+				<div class="option_text" style="padding-top: 5%">
+    				<input type="text" class="form-control" id="option2" placeholder="Option 2" name="option2" data-toggle="collapse" data-target="#option2-menu"/>
 				</div>
 				
-			<div id="option2-menu" class="collapse">
-    			<div class="dropdown">
+				<div id="option2-menu" class="collapse">
+    			<div class="dropdown" style="color:white">
 					What kind of task is this?
   					<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
     					Dropdown
@@ -133,31 +107,37 @@
   					</ul>
 				</div>
 
-				<div style="padding-top: 10%">
+				<div style="padding-top: 10%; color:white">
 					<form>
   						Due Date:
   						<input type="date">
 					</form>
 				</div>
 				
-					<div class="slidecontainer" style="padding-top: 10%">
+					<div class="slidecontainer" style="padding-top: 10%; color: white">
 						<p>How much is the workload for this task? (Low to high)</p>
   						<input type="range" min="1" max="5" value="1" class="slider" id="work_slider_two">
 					  	<p>Value: <span id="work_value_two"></span></p>
 					</div>
 
-					<div class="slidecontainer" style="padding-top: 10%">
+					<div class="slidecontainer" style="padding-top: 10%; color: white">
 						<p>How quickly can you finish this task? (Slow to fast)</p>
   						<input type="range" min="1" max="5" value="1" class="slider" id="quick_slider_two">
 					  	<p>Value: <span id="quick_value_two"></span></p>
 					</div>
 
-					<div class="slidecontainer" style="padding-top: 10%">
+					<div class="slidecontainer" style="padding-top: 10%; color: white">
 						<p>How much does completing this task inpact your future plans? (small to large impact)</p>
   						<input type="range" min="1" max="5" value="1" class="slider" id="future_slider_two">
 					  	<p>Value: <span id="future_value_two"></span></p>
 					</div>
-
+					
+					<div class="save_close">
+						<button type="button" class="btn btn-success" id="save_option2"  data-toggle="collapse" data-target="#option2-menu">Save</button>
+						<button type="button" class="close" aria-label="Close" style="float: right" data-toggle="collapse" data-target="#option2-menu">
+  							<span aria-hidden="true" style="height:5px;width:5px">&times;</span>
+						</button>
+					</div>
 				</div>
 
 				<div class="text-center" style="padding-top: 10px">
@@ -165,125 +145,18 @@
 						<button class="btn btn-primary" id="weigh_options" disabled="disabled">Weigh my options!</button>
 					</div>
 				</div>
-			</form>
-
-			{{else}}
-			<form id="addOptionsForm" role="form" method="get" action="/add_options">
-				<div class="input-group">
-					<span class="input-group-btn">
-						<button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#option1-menu">+</button>
-					</span>
-					<div class="option_text">
-    				<input type="text" class="form-control" id="option1" placeholder="Option 1" name="option1"/>
-					</div>
-					<span class="input-group-btn">
-						<button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#option2-menu">+</button>
-					</span>
-					<div class="option_text">
-    				<input type="text" class="form-control" id="option2" placeholder="Option 2" name="option2"/>
-					</div>
-				</div>
-				<div class="text-center" style="padding-top: 10px">
-				<div id="option1-menu" class="collapse">
-    			<div class="dropdown">
-					What kind of task is this?
-  					<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-    					Dropdown
-    					<span class="caret"></span>
-  					</button>
-  					<ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu1">
-    					{{#each list}}
-							<li><a href="#">{{type}}</a></li>
-						{{/each}}
-  					</ul>
-				</div>
-
-				<div style="padding-top: 10%">
-					<form>
-  						Due Date:
-  						<input type="date">
-					</form>
-				</div>
-
-					<div class="slidecontainer" style="padding-top: 10%">
-						<p>How much is the workload for this task? (Low to high)</p>
-  						<input type="range" min="1" max="5" value="1" class="slider" id="work_slider_one">
-					  	<p>Value: <span id="work_value_one"></span></p>
-					</div>
-
-					<div class="slidecontainer" style="padding-top: 10%">
-						<p>How quickly can you finish this task? (Slow to fast)</p>
-  						<input type="range" min="1" max="5" value="1" class="slider" id="quick_slider_one">
-					  	<p>Value: <span id="quick_value_one"></span></p>
-					</div>
-
-					<div class="slidecontainer" style="padding-top: 10%">
-						<p>How much does completing this task inpact your future plans? (small to large impact)</p>
-  						<input type="range" min="1" max="5" value="1" class="slider" id="future_slider_one">
-					  	<p>Value: <span id="future_value_one"></span></p>
-					</div>
-
-  			</div>
-
-
-			<div id="option2-menu" class="collapse">
-    			<div class="dropdown">
-					What kind of task is this?
-  					<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-    					Dropdown
-    					<span class="caret"></span>
-  					</button>
-  					<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-    					{{#each list}}
-							<li><a href="#">{{type}}</a></li>
-						{{/each}}
-  					</ul>
-				</div>
-
-				<div style="padding-top: 10%">
-					<form>
-  						Due Date:
-  						<input type="date">
-					</form>
-				</div>
-				
-					<div class="slidecontainer" style="padding-top: 10%">
-						<p>How much is the workload for this task? (Low to high)</p>
-  						<input type="range" min="1" max="5" value="1" class="slider" id="work_slider_two">
-					  	<p>Value: <span id="work_value_two"></span></p>
-					</div>
-
-					<div class="slidecontainer" style="padding-top: 10%">
-						<p>How quickly can you finish this task? (Slow to fast)</p>
-  						<input type="range" min="1" max="5" value="1" class="slider" id="quick_slider_two">
-					  	<p>Value: <span id="quick_value_two"></span></p>
-					</div>
-
-					<div class="slidecontainer" style="padding-top: 10%">
-						<p>How much does completing this task inpact your future plans? (small to large impact)</p>
-  						<input type="range" min="1" max="5" value="1" class="slider" id="future_slider_two">
-					  	<p>Value: <span id="future_value_two"></span></p>
-					</div>
-
-				</div>
-
-  				<div class="submit_options">
-					<button class="btn btn-primary" id="weigh_options" disabled="disabled">Weigh my options!</button>
 				</div>
 			</form>
-			{{/if}}
 
-			<div id="decision-menu">
-				{{#each options}}
-					<h1 style="color:green;">{{option1}}</h1>
-					<div class="text-center" style="padding-top: 10px">
-						<a class="btn btn-primary" href="history" role="button">Here's why</a>
-					</div>
-				{{/each}}
+
+			<div style="padding-top: 10%">
+				<a href="help">
+				<img id= "help_pic" src="../images/question.png" alt="help" class="img" style="width:20px; height: 20px; float: left">
+				</a>
+				<form id="resetOptionsForm" role="form" method="get" action="/resetOptions" style="float: right">
+					<input type="submit" class="btn btn-dark" id="reset_options" value="Reset">
+				</form>
 			</div>
-			<form id="resetOptionsForm" role="form" method="get" action="/resetOptions" style="float: right; padding-top: 10%">
-				<input type="submit" class="btn btn-dark" id="reset_options" value="Reset">
-			</form>
 		</div>
 	</div>
 	<script src="/js/bootstrap.min.js"></script>
